[tool.poetry]
name = "ssh-tunnel-manager"
version = "0.1.0"
description = "A simple ssh tunnel manager"
authors = ["Joshua Wagner <joshuawagner96@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
